--- a/topografiya/templates/leader/program_works/program_work_form.html
+++ b/topografiya/templates/leader/program_works/program_work_form.html
@@ -107,7 +107,7 @@
                                                    <span><input style="width: 73%" class="m-b-5 formact"  name="a1_2" id="a1_2" type="text"></span>
                                                    <br><br>
                                                    Дополнительные требования к выполнению геодезических работ
-                                                   <span><input class="m-b-5 formact" style="width: 63%" id="1_3"   name="a1_3" type="text"></span>
+                                                   <span><input class="m-b-5 formact" style="width: 63%" id="a1_3"   name="a1_3" type="text"></span>
                                                </p>
                                                <div class="mb-3 row">
                                                    <label style="text-transform: lowercase;" class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-primary">2</span> КРАТКАЯ ФИЗИКО-ГЕОГРАФИЧЕСКАЯ ХАРАКТЕРИСТИКА РАЙОНА РАБОТ</label>
@@ -422,7 +422,7 @@
                                                    <span><input style="width: 73%" class="m-b-5 formact"  name="a1_2" value="{{ form.a1_2 }}" id="a1_2" type="text"></span>
                                                    <br><br>
                                                    Дополнительные требования к выполнению геодезических работ
-                                                   <span><input class="m-b-5 formact" style="width: 63%"   name="a1_3" id="1_3" value="{{ form.a1_3 }}" type="text"></span>
+                                                   <span><input class="m-b-5 formact" style="width: 63%"   name="a1_3" id="a1_3" value="{{ form.a1_3 }}" type="text"></span>
                                                </p>
 
                                                <div class="mb-3 row">
